# selection-hook-flutter

./: .gitignore  .pubignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  PLATFORM_NOTES.md  PORTING_NOTES.md  README.md  README_scaffold.md  TODO.md  pubspec.yaml
example/: README.md  pubspec.yaml
example/lib/: main.dart
example/linux/flutter/: generated_plugins.cmake
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/windows/: CMakeLists.txt
example/windows/runner/: Runner.rc
lib/: selection_hook_flutter.dart  selection_hook_flutter_bindings_generated.dart
lib/src/: selection_hook_impl.dart
linux/: CMakeLists.txt
macos/: selection_hook_flutter.podspec
macos/Classes/: selection_hook_flutter.mm
selection_hook_flutter/: .metadata  ffigen.yaml
selection_hook_flutter/example/lib/: main.dart
selection_hook_flutter/example/linux/: CMakeLists.txt
selection_hook_flutter/example/linux/runner/: my_application.cc
selection_hook_flutter/example/macos/Runner/: DebugProfile.entitlements
selection_hook_flutter/example/macos/Runner.xcodeproj/: project.pbxproj
selection_hook_flutter/example/macos/Runner/Configs/: AppInfo.xcconfig
selection_hook_flutter/example/windows/flutter/: generated_plugins.cmake
selection_hook_flutter/example/windows/runner/: main.cpp
selection_hook_flutter/lib/: selection_hook_flutter.dart  selection_hook_flutter_bindings_generated.dart
selection_hook_flutter/lib/src/: selection_hook_impl.dart
selection_hook_flutter/macos/: selection_hook_flutter.podspec
selection_hook_flutter/macos/Classes/: selection_hook_flutter.mm
selection_hook_flutter/src/: CMakeLists.txt  selection_hook_flutter.c
selection_hook_flutter/src/bridge/: c_api.h  c_api_mac.mm
selection_hook_flutter/src/mac/: selection_hook_core.h  selection_hook_core.mm
selection_hook_flutter/src/mac/lib/: utils.mm
selection_hook_flutter/tool/: smoke_test.dart
src/: CMakeLists.txt
src/bridge/: c_api.cc  c_api.h  c_api_linux.cc  c_api_mac.mm  c_api_win.cc
src/linux/: common.h  selection_hook_core.cc  selection_hook_core.h
src/linux/lib/: keyboard.cc  keyboard.h  utils.cc  utils.h
src/linux/protocols/: wayland.cc  x11.cc
src/linux/protocols/wayland/: README.md  ext-data-control-v1-client.h  wlr-data-control-unstable-v1-client.h
src/mac/: selection_hook_core.h  selection_hook_core.mm
src/mac/lib/: clipboard.h  clipboard.mm  keyboard.mm  utils.h  utils.mm
src/windows/: selection_hook_core.cc  selection_hook_core.h
src/windows/lib/: clipboard.cc  clipboard.h  keyboard.cc  keyboard.h  string_pool.cc  string_pool.h  utils.cc  utils.h
windows/: CMakeLists.txt
